--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
       <h1 class="sub-title">Our Journey</h1>
       <div class="services-list">
         <div>
-          <i class="fa-solid fa-code"></i>
+          <i class="fa-brands fa-x-twitter"></i>
           <h2>Started from Twitter</h2>
           <p>
             Spaces, Trends, Chatting in trends, GC’s ( smaller GC’s😂), RS spaces, fake ids for threads, coded tweets for knight, antakshris, “love” for some people, Shipping
           </p>
         </div>
         <div>
-          <i class="fa-solid fa-crop"></i>
+         <i class="fa-solid fa-phone"></i>
           <h2>To Calls</h2>
           <p>
             Endless gossiping, life & family talks, career discussions, advices, listening to drunk people, Plotting😂, movie nights, games
@@ -117,7 +117,7 @@
           
         </div>
         <div>
-          <i class="fa-brands fa-google-play"></i>
+         <i class="fa-regular fa-heart"></i>
           <h2>To being Fam</h2>
           <p>
             Just us being us, defending, laughing, roasting, supporting, becoming each other’s strength.
