--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <nav>
         <img src="images/logo.png" class="logo" />
         <ul id="sidemenu">
-          <li><a href="#header">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#header">Welcome😊</a></li>
+          <li><a href="#about">About Anki🫣</a></li>
+          <li><a href="#services">Our Journey🛣️</a></li>
+          <li><a href="#portfolio">Wishing You❣️</a></li>
+<!--           <li><a href="#contact">Contact</a></li> -->
           <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
         <i class="fa-solid fa-list" onclick="openmenu()"></i>
